--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@emotion/styled": "^11.6.0",
+    "@firebase/firestore": "^3.4.12",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@mui/material": "^5.3.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -27,6 +28,7 @@
     "bootstrap": "^5.1.3",
     "ethers": "^5.5.1",
     "file-type": "^17.0.2",
+    "firebase": "^9.9.0",
     "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "gh-pages": "^3.2.3",
