--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.3.0",
     "typescript": "^4.5.2",
+    "uuid": "^8.3.2",
+    "uuid4": "^2.0.2",
     "video-react": "^0.15.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.6.1",
