--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto": false
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.6",
     "@ant-design/icons": "^4.7.0",
     "@emotion/styled": "^11.6.0",
     "@firebase/firestore": "^3.4.12",
@@ -26,14 +27,16 @@
     "api": "^4.2.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "ethers": "^5.5.1",
     "file-type": "^17.0.2",
     "firebase": "^9.9.0",
     "font-awesome": "^4.7.0",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "gh-pages": "^3.2.3",
     "global": "^4.4.0",
-    "ipfs-http-client": "^53.0.1",
+    "ipfs-http-client": "^47.0.1",
     "react": "^17.0.2",
     "react-accessible-dropdown-menu-hook": "^3.1.0",
     "react-alice-carousel": "^2.5.1",
