--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.6.0",
     "@firebase/firestore": "^3.4.12",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
